Various bug fixing - Corrected the wrong z-index for cards linked to a Senator - Corrected killSenator function

--- a/resources/css/sprite.css
+++ b/resources/css/sprite.css
@@ -4,6 +4,11 @@
     display: block;
 }
 
+.sprite-modal {
+    position: absolute;
+    z-index : 500 ;
+}
+
 /*
     Cards (400x275 px)
 */
